# Firmware-Salvador

./: .clang-format  .clangd  .cursorrules  .dockerignore  .gitignore  CMakeLists.txt  LICENSE.md  Readme.md  SetupK1.bash  SetupT1.py  TOOLCHAIN_VERSION  boost_sysroot.cmake  booster_sdk.cmake  clusterssh.py  deploy.py  install.bash  main.cpp  realsense.cmake  rerun.cmake  sim_toolchains.cmake  tflite_sysroot.cmake  time.sh  toolchains.cmake
agents/: CMakeLists.txt  agent_base.h  agent_runner.cpp  agent_runner.h  dribble.cpp  dribble.h  dribble_k1.cpp  goalie_dive.cpp  goalie_dive.h  goalie_positioning.cpp  goalie_positioning.h  localize.cpp  localize.h  search_ball.cpp  search_ball.h  shoot.cpp  shoot.h  walk_custom.cpp  walk_custom.h  walk_relative.cpp  walk_relative.h  walk_to_pos.cpp  walk_to_pos.h
agents/policy_executor/: policy_executor.cpp  policy_executor.h
camera/: CMakeLists.txt  camera.cpp  camera.h  camera_connector.h
camera/booster_camera/: CMakeLists.txt  booster_camera.cpp  booster_camera.h
camera/drobotics/: CMakeLists.txt  drobotics.cpp  drobotics.h
camera/pub_sub/: CMakeLists.txt  camera_pub_sub.cpp  camera_pub_sub.h  image.h
camera/realsense/: CMakeLists.txt  realsense.cpp  realsense.h
camera/zed2/: CMakeLists.txt  zed2.cpp  zed2.h
cuda-test/: CMakeLists.txt  test.cu
deploy/drobotics_shm_publisher/: CMakeLists.txt  README.md  package.xml  start_shm_bridge.sh
fluxlog/: CMakeLists.txt  logging.cpp  logging.h  timer.h
fluxlog/fluxlog_vision/: CMakeLists.txt  fluxlog_vision.cpp  fluxlog_vision.h
game_controller/: CMakeLists.txt  always_play_gc.h  game_controller.cpp  game_controller.h
game_controller/humanoid/: CMakeLists.txt  RoboCupGameControlData.h  SPLCoachMessage.h  SPLStandardMessage.h
game_controller/pub_sub/: CMakeLists.txt  gc_pub_sub.cpp  gc_pub_sub.h  gc_state.cpp  gc_state.h
head_control/: CMakeLists.txt  head_control.cpp  head_control.h
head_control_nao/: CMakeLists.txt  head_control.cpp  head_control.h
localization/: CMakeLists.txt  localization.cpp  localization.h
localization/pub_sub/: CMakeLists.txt  localization_pub_sub.cpp  localization_pub_sub.h
localization_debugger/: CMakeLists.txt  clang-format.yaml  debugger.cpp  imgui.ini  soccer_field_visualizer.cpp  soccer_field_visualizer.h  visualizer.cpp
motion_connector/: CMakeLists.txt  motion_connector_k1.cpp  motion_connector_t1.cpp  motion_connector_t1.h  motion_connector_t1_custom.cpp  motion_connector_t1_custom.h  walk_custom.cpp  walk_custom.h
motion_connector/pub_sub/: CMakeLists.txt  motion_command.cpp  motion_command.h  motion_pub_sub.cpp  motion_pub_sub.h
multi_target_tracker/: CMakeLists.txt  ball_tracker.cpp  ball_tracker.h  multi_target_tracker.cpp  multi_target_tracker.h
multi_target_tracker/pub_sub/: CMakeLists.txt  multi_target_tracker_pub_sub.cpp  multi_target_tracker_pub_sub.h
near_obstacle_tracker/: CMakeLists.txt  near_obstacle_tracker.cpp  near_obstacle_tracker.h
near_obstacle_tracker/pub_sub/: CMakeLists.txt  near_obstacle_tracker_pub_sub.cpp  near_obstacle_tracker_pub_sub.h  near_obstacle_tracker_result.cpp  near_obstacle_tracker_result.h
odometer/: CMakeLists.txt  odometer_processor.cpp  odometer_processor.h
orders/: CMakeLists.txt  keepgoalorder.h  moveballgoalorder.h  moveballorder.h  noorder.h  order.cpp  order.h  penaltydiveorder.h  shootorder.h  walkcustomorder.h  walkrelativeorder.h  walktopositionorder.h
sensor/: CMakeLists.txt  sensor.cpp  sensor.h
sensor/pub_sub/: CMakeLists.txt  imu_joint_state.h  sensor_pub_sub.cpp  sensor_pub_sub.h
soccerfield/: CMakeLists.txt  soccerfield.cpp  soccerfield.h  soccerfielddefinitions.cpp  soccerfielddefinitions.h  soccerfieldinstance.cpp  soccerfieldinstance.h
team_strategy/: CMakeLists.txt  moveball_strategy.cpp  moveball_strategy.h  noop_strategy.h  penalty_strategy.h  robocup_strategy.cpp  robocup_strategy.h  stay_strategy.cpp  stay_strategy.h  striker_strategy.cpp  striker_strategy.h  team_strategy.cpp  team_strategy.h  team_strategy_factory.cpp  team_strategy_factory.h  tutorial_strategy.h
team_strategy/features/: position_area.h  position_util.cpp  position_util.h  ready_positioning.cpp  ready_positioning.h
team_strategy/pub_sub/: CMakeLists.txt  team_strategy_pub_sub.cpp  team_strategy_pub_sub.h
team_strategy/standard_situations/: field_defender.cpp  field_defender.h  line_defender.cpp  line_defender.h  penalty_kick.cpp  penalty_kick.h
team_strategy_debugger/: .clangd  CMakeLists.txt  README.md  debugger.cpp  imgui.ini  robot_process.cpp  shared_memory.h  sim_time.cpp  soccer_field_visualizer.cpp  soccer_field_visualizer.h  visualizer.cpp
utils/: CMakeLists.txt  T1_config.h  algorithm_ext.h  async.h  bounding_box.h  cam_constants.h  color.h  ellipse.h  fall_down_state.h  head_focus.h  line.h  localization_utils.cpp  localization_utils.h  named_thread.h  odometer.h  point_2d.cpp  point_2d.h  point_3d.h  position.h  quaternion.cpp  quaternion.h  rel_ball.h  robot_detection.h  stl_ext.h  threadsafe_deque.h  tracked_object.cpp  tracked_object.h  tts.cpp  tts.h  vector_field.cpp  vector_field.h  walking_time.h
utils/cam_pose/: CMakeLists.txt  cam_pose.cpp  cam_pose.h
utils/dribbling_direction/: CMakeLists.txt  dribbling_direction.h
utils/ipc/: booster_camera_shm.h  drobotics_shm.h
utils/pub_sub/: CMakeLists.txt  callback.h  channel.h  map_store.h  queue.h
utils/time/: CMakeLists.txt  robot_time.h
utils/vision_primitives/: CMakeLists.txt  linegroup.h
vision/: CMakeLists.txt  base_detector.h  field_border_detector.cpp  field_border_detector.h  field_color_detector.cpp  field_color_detector.h  htwk_vision.cpp  htwk_vision.h  hypotheses_generator.h  image_preprocessor.cpp  image_preprocessor.h  integral_image.cpp  integral_image.h  line_detector.cpp  line_detector.h  plane_detection.cpp  plane_detection.h  region_classifier.cpp  region_classifier.h
vision/booster_vision/: CMakeLists.txt  config.h  detector.cpp  detector.h  license
vision/obstacle_detection_legacy/: CMakeLists.txt  obstacle_detector_legacy.cpp  obstacle_detector_legacy.h
(+79 files in other folders)
